// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Topsort's impressionsList destination action: all fields 1`] = `
Object {
  "impressions": Array [
    Object {
      "additionalAttribution": Object {
        "testType": "*!q7CdwC!9Q",
      },
      "id": "*!q7CdwC!9Q",
      "occurredAt": "2021-02-01T00:00:00.000Z",
      "opaqueUserId": "*!q7CdwC!9Q",
      "resolvedBidId": "*!q7CdwC!9Q",
    },
  ],
}
`;

exports[`Testing snapshot for Topsort's impressionsList destination action: required fields 1`] = `
Object {
  "impressions": Array [
    Object {
      "id": "*!q7CdwC!9Q",
      "occurredAt": "2021-02-01T00:00:00.000Z",
      "opaqueUserId": "*!q7CdwC!9Q",
      "resolvedBidId": "*!q7CdwC!9Q",
    },
  ],
}
`;
